--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "bankmanagement",
+  "name": "web322-app",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "akash yadav",
+  "author": "Akash yadav",
   "license": "ISC",
   "dependencies": {
-    "cloudinary": "^1.37.3",
-    "ejs": "^3.1.9",
-    "express": "^4.18.2",
+    "cloudinary": "^1.37.1",
+    "express": "^4.17.2",
     "express-handlebars": "^7.0.7",
     "handlebars": "^4.7.7",
     "multer": "^1.4.5-lts.1",
     "streamifier": "^0.1.1"
-  }
+  },
+  "description": ""
 }
