--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "bankmanagement",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -17,5 +16,6 @@
     "handlebars": "^4.7.7",
     "multer": "^1.4.5-lts.1",
     "streamifier": "^0.1.1"
-  }
+  },
+  "description": ""
 }
