--- a/package.json
+++ b/package.json
@@ -89,6 +89,8 @@
     "path-key": "^3.1.1",
     "path-scurry": "^1.10.1",
     "path-to-regexp": "^0.1.7",
+    "pg": "^8.11.1",
+    "pg-hstore": "^2.3.4",
     "process-nextick-args": "^2.0.1",
     "proxy-addr": "^2.0.7",
     "q": "^1.5.1",
@@ -99,6 +101,7 @@
     "safe-buffer": "^5.2.1",
     "safer-buffer": "^2.1.2",
     "send": "^0.18.0",
+    "sequelize": "^6.32.1",
     "serve-static": "^1.15.0",
     "setprototypeof": "^1.2.0",
     "shebang-command": "^2.0.0",
