--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "etag": "^1.8.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
+    "express-session": "^1.17.3",
     "filelist": "^1.0.4",
     "finalhandler": "^1.2.0",
     "foreground-child": "^3.1.1",
