--- a/package.json
+++ b/package.json
@@ -138,5 +138,9 @@
     "start": "node server.js"
   },
   "author": "akash yadav",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
+  }
 }
