--- a/package.json
+++ b/package.json
@@ -114,22 +114,7 @@
     "streamifier": "^0.1.1",
     "streamsearch": "^1.1.0",
     "string_decoder": "^1.1.1",
-    "string-width": "^5.1.2",
-    "strip-ansi": "^7.1.0",
-    "supports-color": "^7.2.0",
-    "toidentifier": "^1.0.1",
-    "type-is": "^1.6.18",
-    "typedarray": "^0.0.6",
-    "uglify-js": "^3.17.4",
-    "unpipe": "^1.0.0",
-    "util-deprecate": "^1.0.2",
-    "utils-merge": "^1.0.1",
-    "vary": "^1.1.2",
-    "which": "^2.0.2",
-    "wordwrap": "^1.0.0",
-    "wrap-ansi": "^8.1.0",
-    "wrap-ansi-cjs": "^7.0.0",
-    "xtend": "^4.0.2"
+    "string-width": "^5.1.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
