--- a/package.json
+++ b/package.json
@@ -119,7 +119,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "build": "npm start build"
+    "build": "webpack"
   },
   "author": "akash yadav",
   "license": "ISC",
