--- a/package.json
+++ b/package.json
@@ -118,8 +118,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "build": "webpack"
+    "start": "node server.js"
   },
   "author": "akash yadav",
   "license": "ISC",
