--- a/package.json
+++ b/package.json
@@ -118,7 +118,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "build":"webpack"
   },
   "author": "akash yadav",
   "license": "ISC",
